GameSpace_previous/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gamespace
  labels:
    name: gamespace
    app: gamespace
